@@ -1,3 +1,7 @@
+3/8/2005
+	- Support the BIND misfeature of loading zones with no explicit
+	  TTL by using the SOA minimum field.
+
 3/7/2005
 	- 1.6.6 released.
 
